--- a/v2.0.0/tsconfig.json
+++ b/v2.0.0/tsconfig.json
@@ -25,6 +25,7 @@
         "ts/Spawn.ts",
         "ts/Modal.ts",
         "ts/Drag.ts",
-        "ts/Designer.ts"
+        "ts/Designer.ts",
+        "ts/Docs.ts"
     ]
 }
